feat: enhance stay management with refined access control and user privileges
- Update AI_MEMORY.md to reflect recent changes in stay management and access control.
- Modify contexte-actif.md to include new authorization logic for stay-related endpoints.
- Revise decisions-architecturales.md to document the integration of `GESTION_SEJOURS` authority across various services and controllers.
- Change authorization annotations in multiple controllers (Activite, Enfant, Groupe, Horaire, Lieu, MenuRepas, Moment, PlanningGrille, Sejour, TypeActivite) from `hasRole('DIRECTION')` to `hasAuthority('GESTION_SEJOURS')`.
- Implement user token ID handling in service methods to ensure proper access verification.
- Enhance SejourVerificationService to enforce business rules for stay management based on user roles.

These updates significantly improve the security and clarity of stay management by ensuring that access is appropriately controlled based on user privileges, thereby enhancing the overall integrity of the application.